--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gatsby-plugin-sitemap": "^2.2.12",
     "gatsby-remark-autolink-headers": "^2.1.10",
     "gatsby-remark-copy-linked-files": "^2.1.19",
+    "gatsby-remark-embed-gist": "^1.1.9",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.1.22",
     "gatsby-remark-katex": "^3.1.8",
@@ -76,6 +77,7 @@
     "node-sass": "^4.12.0",
     "normalize-scss": "^7.0.1",
     "prismjs": "^1.17.1",
+    "prismjs-material-theme": "^1.0.0",
     "react": "^16.9.0",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.9.0",
